--- a/personalproject.html
+++ b/personalproject.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Project</title>
-    <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)"" href="css/style.css">
+    <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)" href="css/style.css">
     <script src="js/main.js"></script>
 </head>
 
