--- a/major.html
+++ b/major.html
@@ -85,7 +85,7 @@
     <br>
     <br>
 
-    <img class="image1" src="images/DPU.jpg"/>
+    <img class="image1" src="images/DPU.jpg" alt="DPU"/>
     
     <br>
     <br>
